--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,10 +1,24 @@
 <nav class="navbar bg-secondary text-white">
   <div class="container-fluid d-flex justify-content-between align-items-center">
-    <a class="navbar-brand text-white m-0" routerLink="/">Pokeverse</a>
-    <ul class="navbar-nav flex-row">
-      <li class="nav-item me-3">
-        <a class="nav-link text-white" routerLink="/">All Pokemon</a>
-      </li>
-    </ul>
+    <!-- Left side: Logo and All Pokemon -->
+    <div class="d-flex align-items-center">
+      <a class="navbar-brand text-white m-0 me-4" routerLink="/">Pokeverse</a>
+      <ul class="navbar-nav flex-row">
+        <li class="nav-item me-3">
+          <a class="nav-link text-white" routerLink="/">All Pokemon</a>
+        </li>
+      </ul>
+    </div>
+
+    <!-- Right side: Battle button -->
+    <div>
+      <button
+        class="btn btn-danger"
+        [disabled]="!canBattle"
+        (click)="onBattleClick()"
+      >
+        Battle
+      </button>
+    </div>
   </div>
 </nav>
